NSD code put into a NsdHelper.kt class for ease of use. Makes things less cluttered if i use a class.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MafiaCompanionApp">
         <activity
-            android:name=".FindLobbyActivity"
+            android:name=".ServerActivity"
             android:exported="false" />
         <activity
-            android:name=".HostLobbyActivity"
+            android:name=".ClientActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
